[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smbcrawler"
dynamic = ["version"]
authors = [
    {name = "Adrian Vollmer", email = "adrian.vollmer@syss.de"},
]
description = 'Search SMB shares for interesting files'
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pentest", "smb", "shares", "reconnaissance"]
license = {text = "MIT License"}
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    'impacket>=0.9.20',
    'python-libnmap',
    'lxml',
    'pdftotext',
    'python-magic',
    'json2html',
    'click',
]

[tool.setuptools]
packages = ["smbcrawler"]

[tool.setuptools-git-versioning]
enabled = true

[project.urls]
"Homepage" = 'https://github.com/SySS-Research/smbcrawler'
"Bug Tracker" = 'https://github.com/SySS-Research/smbcrawler/issues'

[project.scripts]
smbcrawler = "smbcrawler.__main__:main"

[project.optional-dependencies]
tests = [
  'pytest',
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.pytest.ini_options]
norecursedirs = "tests/shares"
filterwarnings = "ignore::DeprecationWarning"
